Mon May  9 12:11:49 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c: added more debugging
	* server/gam_node.c server/gam_node.h server/gam_poll.c:
	  simplification removing an extra indirection of GamNodeData
	  keeping them directly in GamNode
	* server/gam_server.c: removed a warning

Mon May  2 16:15:22 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/Makefile.am libgamin/gam_api.c
	  libgamin/gam_data.[ch]: applied patch from Nicholas Miell in
	  RH bug #154785 to make the client side thread-safe, also used
	  gcc weak symbol support on Linux to not force pthread library
	  onto the programs using the library.

Mon May  2 10:10:05 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch 2 from
	  John McCutchan for inotify 0.23

Fri Apr 15 14:18:53 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_debugging.h server/gam_inotify.c server/gam_inotify.h:
	  applied patch from John McCutchan to align inotify and dnotify 
	  back-end behaviours.


Fri Apr  8 08:05:30 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more fixes
	* python/tests/Makefile.am python/tests/dnotify1[01].py: more
	  regression tests

Thu Apr  7 11:10:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch gamin_inotify_recursive2 from
	  Andrei Lahun provided on bug #171201

Tue Apr  5 16:48:31 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found a problem when demonitoring a directory
	  which is the child of a monitored directory related to #172596
	* python/tests/Makefile.am python/tests/dnotify8.py
	  python/tests/dnotify9.py: added a couple of regression tests for this

Mon Apr  4 13:47:57 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: applied patch from Nickolay Shmyrev to fix
	  a problem on unreadable directories.